# deterministic-categorization

./: .gitignore  README.md  devcontainer.json
.devcontainer/: Dockerfile  dev.Dockerfile  devcontainer.json  docker-compose.yml
categorizer/: Cargo.toml  rebar.config
categorizer/config/: sys.config
categorizer/doc/: categorizer_app.html  categorizer_sup.html  edoc-info  index.html  modules-frame.html  overview-summary.html
categorizer/features/: animal.feature  categorize.feature  category.feature
categorizer/poc/: Process.ipynb  architecture.puml  categories.csv  database.sql  messages.csv  processed.csv  upload.py
categorizer/prov/: Category.v
categorizer/src/: categorizer.app.src  categorizer_app.erl  categorizer_sup.erl  lib.rs  llama_srv.erl  main.rs
categorizer/tests/: animal.rs  categorize.rs  framework.rs  llama_SUITE.erl  poc_SUITE.erl
categorizer/tests/framework/: feeling.rs
doc/diagrams/: architecture.puml
