[package]
name = "categorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "animal" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "categorize" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest